--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "repository": "https://github.com/MicheleBertoli/snapguidist.git",
   "bin": "./bin/snapguidist.js",
   "scripts": {
-    "start": "node ./src/server",
     "test": "jest",
-    "lint": "eslint --ignore-path .gitignore ./"
+    "lint": "eslint --ignore-path .gitignore ./",
+    "build": "babel ./src/client --out-dir ./dist",
+    "dev": "node ./src/server"
   },
   "authors": [
     "Michele Bertoli",
@@ -15,6 +16,9 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "eslint": "^3.12.0",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
