--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint --ignore-path .gitignore ./",
-    "build": "babel ./src/client --out-dir ./dist",
+    "build:components": "babel ./src/client --out-dir ./dist",
+    "build:styles": "cssnano ./src/client/styles.css ./dist/styles.css",
+    "build": "yarn run build:components && yarn run build:styles",
     "dev": "node ./src/server"
   },
   "authors": [
@@ -19,6 +21,7 @@
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "cssnano-cli": "^1.0.5",
     "eslint": "^3.12.0",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
