lint test folder

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,6 @@
     "semi": [2, "never"],
     "no-param-reassign": [2, { "props": false }],
     "react/jsx-filename-extension": [2, { "extensions": [".js"] }],
-    "import/no-extraneous-dependencies": [2, { "devDependencies": ["example/**/*", "test/*"] }]
+    "import/no-extraneous-dependencies": [2, { "devDependencies": ["example/**/*", "test/**/*"] }]
   }
 }
