--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.18.0",
+    "babel-jest": "^17.0.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "cssnano-cli": "^1.0.5",
+    "enzyme": "^2.7.0",
     "eslint": "^3.12.0",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
@@ -37,6 +39,10 @@
     "eslint-plugin-react": "^6.8.0",
     "fs-extra": "^1.0.0",
     "jest": "^17.0.3",
+    "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-styleguidist": "^4.4.1",
     "rimraf": "^2.5.4",
     "supertest": "^2.0.1",
     "supertest-as-promised": "^4.0.2"
