--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "6.18.0",
+    "babel-jest": "18.0.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "cssnano-cli": "1.0.5",
+    "enzyme": "2.7.0",
+    "enzyme-to-json": "1.4.5",
     "eslint": "3.12.2",
     "eslint-config-airbnb": "13.0.0",
     "eslint-plugin-import": "2.2.0",
@@ -38,6 +41,10 @@
     "eslint-plugin-react": "6.8.0",
     "fs-extra": "1.0.0",
     "jest": "18.1.0",
+    "react": "15.4.1",
+    "react-addons-test-utils": "15.4.1",
+    "react-dom": "15.4.1",
+    "react-styleguidist": "4.4.3",
     "rimraf": "2.5.4",
     "supertest": "2.0.1"
   },
