Chore: Updated react-styleguidist to master until a new  version is released

--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
     "react": "15.4.1",
     "react-addons-test-utils": "15.4.1",
     "react-dom": "15.4.1",
-    "react-styleguidist": "4.4.3",
+    "react-styleguidist": "styleguidist/react-styleguidist#da1fd66",
     "rimraf": "2.5.4",
-    "supertest": "2.0.1"
+    "supertest": "2.0.1",
+    "webpack": "1.14.0"
   },
   "dependencies": {
     "body-parser": "1.15.2",
@@ -56,7 +57,7 @@
     "react-test-renderer": "15.4.1"
   },
   "peerDependencies": {
-    "react-styleguidist": "4.4.1",
+    "react-styleguidist": ">4.4.1",
     "webpack": "1.14.0"
   }
 }
