--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
     "babel-loader": "6.2.10",
     "react": "15.4.1",
     "react-dom": "15.4.1",
-    "react-styleguidist": "4.4.3",
+    "react-styleguidist": "styleguidist/react-styleguidist#da1fd66",
     "webpack": "1.14.0"
   }
 }
