Chore: Updated to latest release of react-styleguisit (4.5.0)

--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,7 @@
     "babel-loader": "6.2.10",
     "react": "15.4.1",
     "react-dom": "15.4.1",
-    "react-styleguidist": "styleguidist/react-styleguidist#da1fd66",
+    "react-styleguidist": "4.5.0",
     "webpack": "1.14.0"
   }
 }
