--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint --ignore-path .gitignore ./",
-    "build:prepare": "mkdirp dist/styles",
     "build:components": "babel ./src/ --out-dir ./dist",
-    "build:styles": "cssnano ./src/styles/styles.css ./dist/styles/styles.css",
+    "build:styles": "cssnano ./src/styles.css ./dist/styles.css",
     "build": "yarn run build:components && yarn run build:styles",
     "clean": "rimraf ./dist",
-    "prebuild": "yarn run clean && yarn run build:prepare",
+    "prebuild": "yarn run clean",
     "prepublish": "yarn run build",
     "dev": "node ./src/server",
     "precommit": "opt --out pre-commit --exec 'yarn run lint-staged'",
