--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,13 @@
 
   "rules": {
     "semi": [2, "never"],
+    "comma-dangle": ["error", {
+      "arrays": "always-multiline",
+      "objects": "always-multiline",
+      "imports": "always-multiline",
+      "exports": "always-multiline",
+      "functions": "never"
+    }],
     "react/jsx-filename-extension": [2, { "extensions": [".js"] }],
     "import/no-extraneous-dependencies": [2, { "devDependencies": ["example/**/*", "test/**/*"] }]
   }
