--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babel-jest": "18.0.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
+    "babel-preset-stage-0": "6.16.0",
+    "cross-env": "3.1.3",
     "cssnano-cli": "1.0.5",
     "enzyme": "2.7.0",
     "enzyme-to-json": "1.4.5",
