--- a/example/package.json
+++ b/example/package.json
@@ -11,6 +11,7 @@
     "react": "15.4.1",
     "react-dom": "15.4.1",
     "react-styleguidist": "4.5.0",
+    "snapguidist": "file:../",
     "webpack": "1.14.0"
   }
 }
