--- a/example/.eslintrc
+++ b/example/.eslintrc
@@ -7,6 +7,8 @@
       "imports": "always-multiline",
       "exports": "always-multiline",
       "functions": "never"
-    }]
+    }],
+    "import/no-dynamic-require": 0,
+    "import/newline-after-import": 0
   }
 }
