Chore: Bumped project version to 1.0.0

--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,7 @@
     "react": "15.4.1",
     "react-dom": "15.4.1",
     "react-styleguidist": "4.5.0",
-    "snapguidist": "file:../",
+    "snapguidist": "1.0.0",
     "webpack": "1.14.0"
   }
 }
