--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "babel-jest": "18.0.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
-    "babel-preset-stage-0": "6.16.0",
     "enzyme": "2.7.0",
     "enzyme-to-json": "1.4.5",
     "eslint": "3.12.2",
@@ -31,7 +30,6 @@
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "6.8.0",
-    "express": "4.14.0",
     "fs-extra": "1.0.0",
     "husky": "0.12.0",
     "jest": "18.1.0",
@@ -52,9 +50,9 @@
     "react-test-renderer": "15.4.1"
   },
   "peerDependencies": {
-    "react": ">15",
+    "react": ">=15",
     "react-styleguidist": ">=4.5",
-    "webpack": "1.14.0"
+    "webpack": ">=1.14.0"
   },
   "lint-staged": {
     "*.js": "eslint"
