--- a/example/package.json
+++ b/example/package.json
@@ -3,14 +3,13 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "styleguide-server": "styleguidist server"
+    "start": "styleguidist server"
   },
   "devDependencies": {
-    "babel-core": "^6.20.0",
-    "babel-loader": "^6.2.10",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-styleguidist": "^4.4.1",
-    "webpack": "^1.14.0"
+    "react": "15.4.1",
+    "react-dom": "15.4.1",
+    "react-styleguidist": "4.5.0",
+    "snapguidist": "1.0.0",
+    "webpack": "1.14.0"
   }
 }
