--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
   "name": "snapguidist",
-  "version": "0.1.3",
+  "version": "1.0.0",
   "description": "Snapshot testing for React Styleguidist",
   "repository": "https://github.com/MicheleBertoli/snapguidist.git",
-  "bin": "./bin/snapguidist.js",
+  "main": "./src/index.js",
   "files": [
-    "bin",
-    "dist",
-    "src/server"
+    "src"
   ],
   "scripts": {
+    "start": "styleguidist server --config example/styleguide.config.dev.js",
     "test": "jest",
     "lint": "eslint --ignore-path .gitignore ./",
-    "build:components": "babel ./src/client --out-dir ./dist",
-    "build:styles": "cssnano ./src/client/styles.css ./dist/styles.css",
-    "build": "yarn run build:components && yarn run build:styles",
-    "clean": "rimraf ./dist",
-    "prebuild": "yarn run clean",
-    "prepublish": "yarn run build",
-    "dev": "node ./src/server"
+    "precommit": "opt --out pre-commit --exec 'yarn run lint-staged'",
+    "prepush": "opt --out pre-push --exec 'yarn run lint-staged && yarn run test'"
   },
   "authors": [
     "Michele Bertoli",
@@ -26,36 +20,41 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-jest": "^17.0.2",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "cssnano-cli": "^1.0.5",
-    "enzyme": "^2.7.0",
-    "enzyme-to-json": "^1.4.5",
-    "eslint": "^3.12.0",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.8.0",
-    "fs-extra": "^1.0.0",
-    "jest": "^17.0.3",
-    "react": "^15.4.1",
-    "react-addons-test-utils": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-styleguidist": "^4.4.1",
-    "rimraf": "^2.5.4",
-    "supertest": "^2.0.1",
-    "supertest-as-promised": "^4.0.2"
+    "babel-jest": "18.0.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-react": "6.16.0",
+    "enzyme": "2.7.0",
+    "enzyme-to-json": "1.4.5",
+    "eslint": "3.12.2",
+    "eslint-config-airbnb": "13.0.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "6.8.0",
+    "fs-extra": "1.0.0",
+    "husky": "0.12.0",
+    "jest": "18.1.0",
+    "lint-staged": "3.2.5",
+    "opt-cli": "1.5.1",
+    "react": "15.4.1",
+    "react-addons-test-utils": "15.4.1",
+    "react-dom": "15.4.1",
+    "react-styleguidist": "4.5.0",
+    "supertest": "2.0.1",
+    "webpack": "1.14.0"
   },
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "cors": "^2.8.1",
-    "express": "^4.14.0",
-    "jest-snapshot": "^17.0.3",
-    "react-test-renderer": "^15.4.1"
+    "body-parser": "1.15.2",
+    "classnames": "2.2.5",
+    "cors": "2.8.1",
+    "jest-snapshot": "18.1.0",
+    "react-test-renderer": "15.4.1"
   },
   "peerDependencies": {
-    "react-styleguidist": "^4.4.1"
+    "react": ">=15",
+    "react-styleguidist": ">=4.5",
+    "webpack": ">=1.14.0"
+  },
+  "lint-staged": {
+    "*.js": "eslint"
   }
 }
