--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "6.8.0",
+    "express": "4.14.0",
     "fs-extra": "1.0.0",
     "husky": "0.12.0",
     "jest": "18.1.0",
