--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
   },
 
   "rules": {
-    "semi": [2, "never"],
+    "semi": ["error", "never"],
     "comma-dangle": ["error", {
       "arrays": "always-multiline",
       "objects": "always-multiline",
@@ -15,7 +15,8 @@
       "exports": "always-multiline",
       "functions": "never"
     }],
-    "react/jsx-filename-extension": [2, { "extensions": [".js"] }],
-    "import/no-extraneous-dependencies": [2, { "devDependencies": ["example/**/*", "test/**/*"] }]
+    "no-param-reassign": ["error", { "props": false }],
+    "react/jsx-filename-extension": ["error", { "extensions": [".js"] }],
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": ["example/**/*", "test/**/*"] }]
   }
 }
