--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "jest-diff": "18.1.0",
     "jest-snapshot": "18.1.0",
     "react-test-renderer": "15.4.1",
-    "strip-ansi": "3.0.1"
+    "strip-ansi": "3.0.1",
+    "unfetch": "2.1.2"
   },
   "peerDependencies": {
     "codemirror": ">=5.20.2",
