--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "1.1.2",
   "description": "Snapshot testing for React Styleguidist",
   "repository": "https://github.com/styleguidist/snapguidist.git",
-  "main": "./src/index.js",
+  "main": "./lib/index.js",
   "files": [
-    "src"
+    "lib"
   ],
   "scripts": {
     "start": "styleguidist server --config example/styleguide.config.dev.js",
     "test": "jest",
     "lint": "eslint --ignore-path .gitignore ./",
+    "build:watch": "babel --watch src -d lib --copy-files",
+    "build": "babel src -d lib --copy-files",
+    "prepublish": "yarn run build",
     "precommit": "opt --out pre-commit --exec 'yarn run lint-staged'",
     "prepush": "opt --out pre-push --exec 'yarn run lint-staged && yarn run test'"
   },
@@ -20,11 +23,13 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "6.24.1",
     "babel-jest": "18.0.0",
+    "babel-loader": "6.4.1",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
-    "enzyme": "2.7.0",
-    "enzyme-to-json": "1.4.5",
+    "enzyme": "2.8.2",
+    "enzyme-to-json": "1.5.1",
     "eslint": "3.12.2",
     "eslint-config-airbnb": "13.0.0",
     "eslint-plugin-import": "2.2.0",
@@ -36,10 +41,11 @@
     "jest": "18.1.0",
     "lint-staged": "3.2.5",
     "opt-cli": "1.5.1",
-    "react": "15.4.1",
-    "react-addons-test-utils": "15.4.1",
-    "react-dom": "15.4.1",
-    "react-styleguidist": "4.5.0",
+    "prop-types": "15.5.10",
+    "react": "15.6.1",
+    "react-addons-test-utils": "15.6.0",
+    "react-dom": "15.6.1",
+    "react-styleguidist": "5.4.4",
     "supertest": "2.0.1",
     "webpack": "1.14.0"
   },
@@ -49,7 +55,7 @@
     "cors": "2.8.1",
     "jest-diff": "18.1.0",
     "jest-snapshot": "18.1.0",
-    "react-test-renderer": "15.4.1",
+    "react-test-renderer": "15.6.1",
     "strip-ansi": "3.0.1",
     "unfetch": "2.1.2"
   },
@@ -57,7 +63,7 @@
     "codemirror": ">=5.20.2",
     "react": ">=15",
     "react-codemirror": ">=0.2.6",
-    "react-styleguidist": ">=4.5 <5",
+    "react-styleguidist": ">=5.4.4",
     "webpack": ">=1.14.0"
   },
   "lint-staged": {
