--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "peerDependencies": {
     "codemirror": ">=5.20.2",
     "react": ">=15",
-    "react-codemirror": ">=0.2.6",
+    "react-codemirror2": ">=0.0.13",
     "react-styleguidist": ">=5.4.4",
     "webpack": ">=1.14.0"
   },
