--- a/package.json
+++ b/package.json
@@ -52,17 +52,17 @@
   "dependencies": {
     "body-parser": "1.15.2",
     "classnames": "2.2.5",
+    "codemirror": "5.20.2",
     "cors": "2.8.1",
     "jest-diff": "18.1.0",
     "jest-snapshot": "18.1.0",
+    "react-codemirror": "0.2.6",
     "react-test-renderer": "15.6.1",
     "strip-ansi": "3.0.1",
     "unfetch": "2.1.2"
   },
   "peerDependencies": {
-    "codemirror": ">=5.20.2",
     "react": ">=15",
-    "react-codemirror": ">=0.2.6",
     "react-styleguidist": ">=5.4.4",
     "webpack": ">=1.14.0"
   },
