--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "react": "15.6.1",
     "react-addons-test-utils": "15.6.0",
     "react-dom": "15.6.1",
-    "react-styleguidist": "5.4.4",
+    "react-styleguidist": "6.0.26",
     "supertest": "2.0.1",
-    "webpack": "1.14.0"
+    "webpack": "3.6.0"
   },
   "dependencies": {
     "body-parser": "1.15.2",
@@ -56,7 +56,7 @@
     "cors": "2.8.1",
     "jest-diff": "18.1.0",
     "jest-snapshot": "18.1.0",
-    "react-codemirror": "0.2.6",
+    "react-codemirror2": "2.0.2",
     "react-test-renderer": "15.6.1",
     "strip-ansi": "3.0.1",
     "unfetch": "2.1.2"
