--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "babel-loader": "6.4.1",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
-    "enzyme": "2.8.2",
-    "enzyme-to-json": "1.5.1",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
+    "enzyme-to-json": "3.3.1",
     "eslint": "3.12.2",
     "eslint-config-airbnb": "13.0.0",
     "eslint-plugin-import": "2.2.0",
@@ -38,26 +39,26 @@
     "express": "4.14.0",
     "fs-extra": "1.0.0",
     "husky": "0.12.0",
-    "jest": "18.1.0",
+    "jest": "22.1.4",
     "lint-staged": "3.2.5",
     "opt-cli": "1.5.1",
     "prop-types": "15.5.10",
-    "react": "15.6.1",
+    "react": "16.2.0",
     "react-addons-test-utils": "15.6.0",
-    "react-dom": "15.6.1",
-    "react-styleguidist": "6.0.26",
+    "react-dom": "16.2.0",
+    "react-styleguidist": "6.2.2",
     "supertest": "2.0.1",
     "webpack": "3.6.0"
   },
   "dependencies": {
     "body-parser": "1.15.2",
     "classnames": "2.2.5",
-    "codemirror": "5.20.2",
+    "codemirror": "5.34.0",
     "cors": "2.8.1",
-    "jest-diff": "18.1.0",
-    "jest-snapshot": "18.1.0",
+    "jest-diff": "22.1.0",
+    "jest-snapshot": "22.1.2",
     "react-codemirror2": "2.0.2",
-    "react-test-renderer": "15.6.1",
+    "react-test-renderer": "16.2.0",
     "strip-ansi": "3.0.1",
     "unfetch": "2.1.2"
   },
@@ -68,5 +69,8 @@
   },
   "lint-staged": {
     "*.js": "eslint"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>/test/testSetup.js"
   }
 }
